--- a/Fincart/Info.plist
+++ b/Fincart/Info.plist
@@ -35,5 +35,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>NEED ACCESS</string>
 </dict>
 </plist>
